--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,10 @@ footer .fuente-lobster{
     width: 233px;
 }
 
+.marginl{
+    margin-left: 20px;
+}
+
 @media (max-width: 900px) {
     .info-header div h1{
         text-align: center;
@@ -55,5 +59,11 @@ footer .fuente-lobster{
     }
     .info-header{
         text-align: center;
+    }
+  }
+
+  @media (max-width: 400px) {
+    .marginl{
+        margin-left: auto;
     }
   }
